  possibly leaving lock files lying around. Now a failure to look up a chunk
  via its checksum is ignored, and the backup continues.
* Bugs in how Python OSError exceptions were being raises have been fixed.
  Error messages should now be somewhat clearer.
* Unset or wrongly set variable "full" fixed in "obnam diff". Reported
  by ROGERIO DE CARVALHO BASTOS and patched by Peter Valdemar Mørch.

Version 1.2, released 2012-10-06
--------------------------------

* Added a note to `--node-size` that it only affects new B-trees.
  Thanks, Michael Brown.
* New `obnam diff` subcommand to show differences (added/removed/modified
  files) between two generations, by Peter Valdemar Mørch.
* `obnam backup` now logs the names of files that are getting backed up
  at the INFO level rather than DEBUG.
* The command synopsises for backup, restore, and verify commands now
  make it clearer that Obnam only accepts directories, not individual
  files, as arguments. (For now.)
* The output from the `show` plugin can now be redirected with the
  `--output=FILE` option. Affected subcommands: `clients`, `generations`,
  `genids`, `ls`, `diff`, `nagios-last-backup-age`.

Bug fixes:

* Notify user of errors during backups.
* The SFTP plugin now manages to deal with repository paths starting 
  with `/~/` which already exist without crashing.
* Character and block device nodes are now restored correctly.
  Thanks to Martin Dummer for the bug report.
* The symmteric key for a toplevel repository directory is re-encrypted
  when a public key is added or removed to the toplevel using the
  `add-key` or `remove-key` subcommands.
* Manual page typo fix. Thanks, Steve Kemp.

Version 1.1, released 2012-06-30
--------------------------------

* Mark the `--small-files-in-btree` settings as deprecated.
* Obnam now correctly checks that `--repository` is set.
* Options in `--help` output are now grouped in random senseless ways
  rather than being in one randomly ordered group.