@@ -46,6 +46,8 @@ Bug fixes:
   Error messages should now be somewhat clearer.
 * Unset or wrongly set variable "full" fixed in "obnam diff". Reported
   by ROGERIO DE CARVALHO BASTOS and patched by Peter Valdemar Mørch.
+* Setuid and setgid bits are now restored correctly, when restore happens
+  as root. Reported by Pavel Kokolemin.
 
 Version 1.2, released 2012-10-06
 --------------------------------
